--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,8 +19,9 @@ jobs:
           docker-compose -f docker-compose.yml build
           docker-compose -f docker-compose.yml run webapp python -m pytest  # Add tests later
 
+      # Use appleboy/ssh-action@v0.1.15 (latest version as of 2023)
       - name: Deploy to Server
-        uses: appleboy/ssh-action@v1
+        uses: appleboy/ssh-action@v0.1.15
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
